# jelly-BLE

./: .gitignore  README.md
coordinator/: prj.conf
coordinator/include/: ble_callbacks.h
coordinator/src/: ble_callbacks.c  main.c
coordinator/sysbuild/: ipc_radio.conf
node/: CMakeLists.txt  prj.conf
node/include/: ble_callbacks.h  connection_manager.h  scanning.h
node/src/: ble_callbacks.c  connection_manager.c  main.c  scanning.c
shared/: ble_common.c  ble_common.h  button.c  button.h  jelly_rtt_service.c  jelly_rtt_service.h  led.c  led.h  rtt_manager.c  rtt_manager.h
